c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/decl_as_loop_body.c
int main(void) {
    while (1)
        int i = 0;
    return 0;
}